refinements on the nav to be better spaced, better copy for many pages, modified pixel art to be more flexible, added treehouse to design section, refined sketchnotes page

--- a/about/index.html
+++ b/about/index.html
@@ -142,12 +142,12 @@
 
 		<p>
 			<a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
-			Framed Originals and Prints
+			Framed Originals &amp; Prints
 		</p>
 		<p>
 			<a href="http://shop.bysusanlin.com"> Shop </a>
 			<br>
-			Unframed Prints and Stickers
+			Unframed Prints
 		</p>
 		<p>
 			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
