--- a/design/index.html
+++ b/design/index.html
@@ -60,9 +60,9 @@
 </header>
 
 		<div class="intro">
-			<h2> Product Design &amp; CSS Styleguides </h2>
+			<h2> Design </h2>
 			<p>
-		 		These are some of my favorite things I've had the honor of designing and coding.
+				A selected history of work I've had a hand in designing and coding the user experience.
 		 		<br><br>
 		 		Availability:
 		 		<li>
@@ -72,8 +72,15 @@
 		 			I'll consider <a href="/illustration">illustration</a> commissions! bysusanlin at gmail.
 		 		</li>
 		 		<br><br>
-		 		For a formal work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a>
+		 		For a formal design work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a>
 			</p>
+		</div>
+
+		<div>
+			<img src="/images/work/treehouse.png">
+			<h2> Treehouse </h2>
+			<p>
+				I currently work with the <a href="http://teamtreehouse.com">Treehouse</a> <a href="http://dribbble.com/treehouse">design team</a> specifically on the <a href="https://teamtreehouse.com/features/organizations">Organizations</a> product. I also code landing pages, illustrate course assets, and chip away at our styleguide. Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> marketing campaign.
 		</div>
 
 		<div>
@@ -146,12 +153,10 @@
 		</div>
 
 		<div>
-			<a href="http://daily.bysusanlin.com">
-				<img src="/images/work/daily.png">
-			</a>
+			<img src="/images/work/daily.png">
 			<h2> Side Project: Daily RSS Feed </h2>
 			<p>
-				<a href="http://daily.bysusanlin.com">Daily</a> is a fully responsive stream page of RSS feeds I frequent. It's set as my homepage when starting up my browser. The project was designed from <a href="http://instagram.com/p/r35yvby49T/?modal=true">a sketch</a> and then built right in the code.
+				Daily is a fully responsive stream page of RSS feeds I frequented. It was set as my homepage when I started up my browser. The project was designed from <a href="http://instagram.com/p/r35yvby49T/?modal=true">a sketch</a> and then built right in the code. Due to how infrequently my feeds updated, I pulled the plug on Daily.
 				<br><br>
 				<a href="https://github.com/bysl/ankh">View source on Github.</a>
 			</p>
@@ -161,7 +166,7 @@
 			<img src="/images/work/nasa.png">
 			<h2> NASA </h2>
 			<p>
-				Old work that's interesting. I interned and freelanced with NASA's education outreach team who worked on the James Webb Space Telescope. I illustrated art for 2 games <a href="http://jwst.nasa.gov/scope.html">Scope it out!</a> and <a href="http://jwst.nasa.gov/build.html">Build It Yourself: Satellite!</a> I also made print designs which were <a href="http://sketch.bysusanlin.com/tagged/nasa">seen on the set of The Big Bang Theory.</a>
+				Old work that's interesting. I interned and freelanced with NASA's education outreach team who worked on the James Webb Space Telescope. I illustrated art for 2 games <a href="http://jwst.nasa.gov/scope.html">Scope it out!</a> and <a href="http://jwst.nasa.gov/build.html">Build It Yourself: Satellite!</a> I also made print designs which were <a href="http://sketch.bysusanlin.com/tagged/nasa">seen on the set of The Big Bang Theory.</a> It was an experience that set the tone for my entrance into the industry.
 			</p>
 		</div>
 
@@ -169,7 +174,7 @@
 			<img src="/images/work/raincat.jpg">
 			<h2> Indie Games </h2>
 			<p>
-				Old work that's interesting. During college, I shipped <a href="http://www.gamecreation.org/search/node/susan%20lin">an indie game every semester.</a> The best of the bunch was Raincat &mdash; a 2D puzzle game where you keep the cat dry. <a href="http://raincat.bysusanlin.com">The site</a> I made to promote it has accrued over 16,000 views.
+				Old work that's interesting. During college, I shipped <a href="http://www.gamecreation.org/search/node/susan%20lin">an indie game every semester.</a> The best of the bunch was Raincat &mdash; a 2D puzzle game where you keep the cat dry. <a href="http://raincat.bysusanlin.com">The site</a> I made to promote it has accrued over 16,000 views. It was a project that taught me how to share work online.
 			</p>
 		</div>
 
@@ -208,12 +213,12 @@
 
 		<p>
 			<a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
-			Framed Originals and Prints
+			Framed Originals &amp; Prints
 		</p>
 		<p>
 			<a href="http://shop.bysusanlin.com"> Shop </a>
 			<br>
-			Unframed Prints and Stickers
+			Unframed Prints
 		</p>
 		<p>
 			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
