--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -60,63 +60,69 @@
 </header>
 
 		<div class="intro">
+
 			<h2> Sketchnotes </h2>
+
 			<p>
 					Hire me to sketchnote your event. I can effectively sketchnote topics in User Experience, Design Process, and Front-end Engineering.
-					<br><br>
-
-					My terms: <br>
-					<ul>
-						<li>
-							A ticket to your event.
-						</li>
-						<li>
-							Travel and Hotel covered, if applicable.
-						</li>
-						<li>
-							Market freelance rate paid by the hour. Expect to cover hours preparing the set-up, time spent drawing talks, and post-processing.
-						</li>
-						<li>
-							If your event is not-for-profit and a cause I believe in, we can work something out.
-						</li>
-					</ul>
-
-					<br>
-
-					The works: <br>
-					<ul>
-						<li>
-							You may promote your event with an official sketchnoter.
-						</li>
-						<li>
-							I draw in realtime, so you can live-tweet them during the conference.
-						</li>
-						<li>
-							You will receive high-resolution sketchnotes images to share for present and future events.
-						</li>
-						<li>
-							I will cross-promote from my personal accounts before, during, and after the event.
-						</li>
-						<li>
-							(Optional) Potential to sketchnotes to be done on thick, individual boards and gift them to your speakers! Speakers love being sketchnoted.
-						</li>
-					</ul>
-
-					<br>
-
-					Sound good? Get in touch: <a href="">bysusanlin.@gmail.com</a>
-
 			</p>
+
+			<p>
+				My terms: <br>
+				<ul>
+					<li>
+						A ticket to your event.
+					</li>
+					<li>
+						Travel and hotel covered, if applicable.
+					</li>
+					<li>
+						Market freelance rate paid by the hour. Expect to cover hours preparing the set-up, time spent drawing talks, and post-processing.
+					</li>
+					<li>
+						If your event is not-for-profit and a cause I believe in, we can work something out.
+					</li>
+				</ul>
+			</p>
+
+			<p>
+				The works: <br>
+				<ul>
+					<li>
+						You may promote your event with an official sketchnoter.
+					</li>
+					<li>
+						I draw in realtime, so you can live-tweet them during the conference.
+					</li>
+					<li>
+						You will receive high-resolution sketchnotes images to share for present and future events.
+					</li>
+					<li>
+						I will cross-promote from my personal accounts before, during, and after the event.
+					</li>
+					<li>
+						(Optional) Gift sketchnotes to your speakers! Cover the cost of the paper and I'll draw on those. I can consult on frames and gift presentation.
+					</li>
+				</ul>
+			</p>
+
+			<br>
+
+			<p>
+				Sound good? Get in touch: <a href="">bysusanlin.@gmail.com</a>
+			</p>
+
 		</div>
 
 		<div>
+
 			<a href="http://sketch.bysusanlin.com/tagged/sketchnotes">
 				<img src="/images/work/sketchnotes.jpg">
 			</a>
 
-			<h2> Sketchnotes </h2>
+			<h2> Featured </h2>
 			<p>
-				I take visual notes at events and conferences. Previously I've sketched Alterconf, XOXOfest, CSSconf, Interaction, and various local events in SF. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Check out the full archive.</a>
+				Previously I've sketched AlterConf (paid!), XOXOfest, CSSconf, Interaction, and various local events. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Check out the full archive.</a>
 
 				<br><br>
 
@@ -176,12 +182,12 @@
 
 		<p>
 			<a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
-			Framed Originals and Prints
+			Framed Originals &amp; Prints
 		</p>
 		<p>
 			<a href="http://shop.bysusanlin.com"> Shop </a>
 			<br>
-			Unframed Prints and Stickers
+			Unframed Prints
 		</p>
 		<p>
 			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
