--- a/talks/index.html
+++ b/talks/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-	
+
 	<div class="container">
 
 		<header>
@@ -82,7 +82,6 @@
 				<li> Academy of Arts &mdash; Guest Lecture for Visual Design Studio </li>
 
 				<li> #DesignTalk &mdash; <a href="http://padlet.com/norisjavier/designtalk"> Virtual panel on Twitter</a> </li>
-
 			</p>
 
 		</div>
@@ -143,12 +142,12 @@
 
 		<p>
 			<a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
-			Framed Originals and Prints
+			Framed Originals &amp; Prints
 		</p>
 		<p>
 			<a href="http://shop.bysusanlin.com"> Shop </a>
 			<br>
-			Unframed Prints and Stickers
+			Unframed Prints
 		</p>
 		<p>
 			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
