--- a/illustration/index.html
+++ b/illustration/index.html
@@ -60,9 +60,9 @@
 </header>
 
 		<div class="intro">
-			<h2> Illustrations </h2>
+			<h2> Illustration </h2>
 			<p>
-		 		These are some of my favorite things I've had the honor of sketching and painting.
+		 		This will be updated with my favorite sketching and painting projects.
 		 		<br><br>
 		 		Availability:
 		 		<li>
@@ -71,8 +71,6 @@
 		 		<li>
 		 			I'll consider illustration commissions! bysusanlin at gmail.
 		 		</li>
-		 		<br><br>
-		 		For a formal work history, take this <a href="http://bysusanlin.com/SusanLin-resume.pdf">PDF resume.</a>
 			</p>
 		</div>
 
@@ -189,12 +187,12 @@
 
 		<p>
 			<a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
-			Framed Originals and Prints
+			Framed Originals &amp; Prints
 		</p>
 		<p>
 			<a href="http://shop.bysusanlin.com"> Shop </a>
 			<br>
-			Unframed Prints and Stickers
+			Unframed Prints
 		</p>
 		<p>
 			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
