fixes email on sketchnotes page, deletes pinterest verification file

--- a/src/sketchnotes/index.html
+++ b/src/sketchnotes/index.html
@@ -60,7 +60,7 @@
 			<br>
 
 			<p>
-				Sound good? Get in touch: <a href="">bysusanlin.@gmail.com</a>
+				Sound good? Get in touch: bysusanlin at gmail.
 			</p>
 
 		</div>
