--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -109,7 +109,7 @@
 			<br>
 
 			<p>
-				Sound good? Get in touch: <a href="">bysusanlin.@gmail.com</a>
+				Sound good? Get in touch: bysusanlin at gmail.
 			</p>
 
 		</div>
