updates sketchnote section with alterconf testimonial

--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -64,7 +64,7 @@
 			<h2> Sketchnotes </h2>
 
 			<p>
-					Hire me to sketchnote your event. I can effectively sketchnote topics in User Experience, Design Process, and Front-end Engineering.
+					Hire me to sketchnote your event. I can effectively sketchnote topics in User Experience, Design Process, Front-end Engineering, and Diversity.
 			</p>
 
 			<p>
@@ -101,7 +101,7 @@
 						I will cross-promote from my personal accounts before, during, and after the event.
 					</li>
 					<li>
-						(Optional) Gift sketchnotes to your speakers! Cover the cost of the paper and I'll draw on those. I can consult on frames and gift presentation.
+						(Optional) Gift sketchnotes to your speakers! Provide the nice paper. I can consult on frames and gift presentation if you'd like.
 					</li>
 				</ul>
 			</p>
@@ -122,7 +122,7 @@
 
 			<h2> Featured </h2>
 			<p>
-				Previously I've sketched AlterConf (paid!), XOXOfest, CSSconf, Interaction, and various local events. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Check out the full archive.</a>
+				Previously I've sketched AlterConf, XOXOfest, CSSconf, Interaction, and various local events. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Check out the full archive.</a>
 
 				<br><br>
 
@@ -146,6 +146,20 @@
 				Sketchnote Army &mdash; <a href="http://sketchnotearmy.com/blog/2014/6/25/cssconf-sketchnote-susan-lin.html">CSSconf 2014</a> & <a href="http://sketchnotearmy.com/blog/2013/4/2/interaction-2013-sketchnotes.html">Interaction 2013</a>
 				</li>
 		</div>
+
+    <div>
+
+			<a href="http://sketch.bysusanlin.com/tagged/alterconf">
+				<img src="/images/work/sketchnotes.alterconf.jpg">
+			</a>
+
+      <h2> Testimonials </h2>
+
+      <p>
+        "I loved working with Susan. Her sketchnotes captured the feel of AlterConf Portland so well and were beautiful. I highly recommend her work." &mdash;<a href="http://www.alterconf.com/">Ashe Dryden &amp; the AlterConf staff</a>
+      </p>
+
+   </div>
 
 	</div> <!-- sketchnotes -->
 
