updates upcoming events, updates about page

--- a/about/index.html
+++ b/about/index.html
@@ -66,18 +66,38 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Designer who codes at <a href="http://teamtreehouse.com">Treehouse</a> and an Illustrator of many mediums.
+				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com">Treehouse</a> and an Artist.
+      </p>
 
-				<br><br>
-
+      <p>
 				Previously, she <a href="/talks">built styleguides</a> in addition to user experiences at OpenTable and Trulia. She studied <a href="https://www.hcii.cmu.edu/academics/hci-undergraduate/accelerated-masters">HCI at Carnegie Mellon.</a> She believes the best technology designers are able to code and push their own pixels.
+      </p>
 
-				<br><br>
+      <p>
+				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints a <a href="http://shop.bysusanlin.com/susan/Ghibli%20Stained%20Glass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes deliberate practice is the key to a successful art practice.
+      </p>
 
-				She illustrates incessantly. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes</a> out in the wild. She paints a <a href="http://sketch.bysusanlin.com/tagged/ghiblistainedglass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes an obsession of the craft exceeds all.
+      <p>
+        Interviews: <br>
+        <ul>
+          <li>
+            <a href="http://blog.helloflo.com/susan-lin-proves-you-can-pursue-design-and-coding-at-the-same-time/">HelloFlo Blog</a> &mdash; Susan Lin Proves You Can Pursue Design and Coding at the Same Time
+          </li>
+          <li>
+            <a href="https://usesthis.com/interviews/susan.lin">The Set-up</a> &mdash; What do people use to get stuff done?
+          </li>
+          <li>
+            <a href="http://betwixt.is/the-league-of-kind-and-kindred/yes-and-yes-and-yes-and-yes">Betwixt Letter Series</a> &mdash; On saying 'Yes!' to everything
+          </li>
+          <li>
+            <a href="http://betwixt.is/delighted-by/designer-miniviews-susan-lin">Betwixt Mini-interview</a> &mdash; Interview with Susan Lin
+          </li>
+        </ul>
+      </p>
 
-				<br><br>
+      <br>
 
+      <p>
 				Elsewhere on the internet: <br>
 				<a href="http://sketch.bysusanlin.com">Blog</a> |
 				<a href="http://instagram.com/susanl">Instagram</a> |
@@ -86,7 +106,6 @@
 				<a href="http://dribbble.com/bysusanlin">Dribbble</a> |
 				<a href="http://codepen.io/bysusanlin">CodePen</a> |
 				<a href="http://patreon.com/susan">Patreon</a>
-
 			</p>
 
 		</div> <!-- intro -->
@@ -98,7 +117,7 @@
 			<br>
 
 			<p>
-				I drafted, designed, and coded this bit of the internet. The landing page is made with love to the Mother series.
+				I drafted, designed, and coded this bit of the internet. Yes, <a href="/">the landing page</a> is fanart of Earthbound.
 				<br><br>
 				<a href="http://sketch.bysusanlin.com/tagged/pixel-art">See the pixel artwork process.</a>
 				<br>
@@ -118,7 +137,7 @@
 	<p>
 		Upcoming Events
 	</p>
-
+<!--
 	<p>
 		<a href="http://alternativepressexpo.com">Alternative Press Expo</a> <br>
 		Oct 3-4, Booth 246
@@ -128,7 +147,7 @@
 		<a href="http://castrostreetfair.org">Castro Street Fair</a> <br>
 		Oct 4, spark arts
 	</p>
-
+-->
 	<p>
 		<a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
 		Spring 2016
