updated Events to Shows

--- a/about/index.html
+++ b/about/index.html
@@ -135,19 +135,9 @@
 	</a>
 
 	<p>
-		Upcoming Events
-	</p>
-<!--
-	<p>
-		<a href="http://alternativepressexpo.com">Alternative Press Expo</a> <br>
-		Oct 3-4, Booth 246
+		Upcoming Shows
 	</p>
 
-	<p>
-		<a href="http://castrostreetfair.org">Castro Street Fair</a> <br>
-		Oct 4, spark arts
-	</p>
--->
 	<p>
 		<a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
 		Spring 2016
