updates so logo shows up on mobile

--- a/src/_tpls/header.html
+++ b/src/_tpls/header.html
@@ -1,5 +1,9 @@
 <header>
 
+	<a href="/" class="mobile-logo">
+		<img src="/images/bysusanlin-totoro.svg" height="60px">
+	</a>
+
   <ul>
 		<a href="/about">
       <li>
