--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 	<div class="container">
 		<header>
 
+	<a href="/" class="mobile-logo">
+		<img src="/images/bysusanlin-totoro.svg" height="60px">
+	</a>
+
   <ul>
 		<a href="/about">
       <li>
