--- a/illustration/index.html
+++ b/illustration/index.html
@@ -24,6 +24,10 @@
 
 		<header>
 
+	<a href="/" class="mobile-logo">
+		<img src="/images/bysusanlin-totoro.svg" height="60px">
+	</a>
+
   <ul>
 		<a href="/about">
       <li>
