adds shop to top level nav

--- a/src/_tpls/header.html
+++ b/src/_tpls/header.html
@@ -35,6 +35,11 @@
         Blog
       </li>
     </a>
+    <a href="http://shop.bysusanlin.com">
+      <li>
+        Shop
+      </li>
+    </a>
   </ul>
 
 </header>
