adds shop to top level nav

--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         Blog
       </li>
     </a>
+    <a href="http://shop.bysusanlin.com">
+      <li>
+        Shop
+      </li>
+    </a>
   </ul>
 
 </header>
