--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -59,6 +59,11 @@
         Blog
       </li>
     </a>
+    <a href="http://shop.bysusanlin.com">
+      <li>
+        Shop
+      </li>
+    </a>
   </ul>
 
 </header>
