updates gallery date to be specific

--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -10,7 +10,7 @@
 
 	<p>
 		<a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-		Spring 2016
+    March - April 2016
 	</p>
 
 	<div class="typeLowlight"> &mdash; </div>
