--- a/src/about/index.html
+++ b/src/about/index.html
@@ -32,7 +32,7 @@
         Interviews: <br>
         <ul>
           <li>
-            <a href="spec.fm/podcasts/design-details/22326">Design Details</a> &mdash; 86: Adult Recess feat. Susan Lin
+            <a href="http://spec.fm/podcasts/design-details/22326">Design Details Podcast</a> &mdash; 86: Adult Recess feat. Susan Lin
           </li>
           <li>
             <a href="http://blog.helloflo.com/susan-lin-proves-you-can-pursue-design-and-coding-at-the-same-time/">HelloFlo Blog</a> &mdash; Susan Lin Proves You Can Pursue Design and Coding at the Same Time
