--- a/talks/index.html
+++ b/talks/index.html
@@ -124,14 +124,17 @@
 		<img src="/images/bysusanlin-totoro.svg" height="60px">
 	</a>
 
-	<p>
-		Upcoming Shows
-	</p>
-
-	<p>
-		<a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    March - April 2016
-	</p>
+    	<p>
+    		Upcoming Events
+    	</p>
+    	<p>
+    		Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
+    		March 1st - April 30th
+    	</p>
+    	<p>
+    	    Sketchnoting @ <a href="http://clarityconf.com/">Clarity Conf</a> <br>
+    	    March 31st - April 1st
+    	</p>
 
 	<div class="typeLowlight"> &mdash; </div>
 
