updates footer year, adds one time support option

--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -32,5 +32,10 @@
 			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
 			Monthly Support
 		</p>
+    <p>
+	    <a href='https://ko-fi.com/06JVAZ50RNQ' target='_blank'>Buy me a coffee</a> <br>
+	    One Time Support
+		</p>
+
 
 </nav>
