--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -9,9 +9,13 @@
 	</p>
 
 	<p>
-		<a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    March - April 2016
-	</p>
+  		Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum</a> <br>
+  		March 1st - April 30th
+  	</p>
+  	<p>
+  	    Sketchnoting @ <a href="http://clarityconf.com/">Clarity Conf</a> <br>
+  	    March 31st - April 1st
+  	</p>
 
 	<div class="typeLowlight"> &mdash; </div>
 
