tweaks layout based on new amount of content

--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -9,7 +9,7 @@
 	</p>
 
 	<p>
-  		Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum</a> <br>
+  		Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
   		March 1st - April 30th
   	</p>
   	<p>
