updates nav with one time support option, year of footer, layout to look nicer with more info in nav

--- a/illustration/index.html
+++ b/illustration/index.html
@@ -174,9 +174,13 @@
 	</p>
 
 	<p>
-		<a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    March - April 2016
-	</p>
+  		Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
+  		March 1st - April 30th
+  	</p>
+  	<p>
+  	    Sketchnoting @ <a href="http://clarityconf.com/">Clarity Conf</a> <br>
+  	    March 31st - April 1st
+  	</p>
 
 	<div class="typeLowlight"> &mdash; </div>
 
@@ -197,6 +201,11 @@
 			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
 			Monthly Support
 		</p>
+    <p>
+	    <a href='https://ko-fi.com/06JVAZ50RNQ' target='_blank'>Buy me a coffee</a> <br>
+	    One Time Support
+		</p>
+
 
 </nav>
 <footer>
@@ -270,7 +279,7 @@
 		<div class="footnote">
 			<img src="/images/sprite-fp.png" width="27px" class="sprite">
 			<br>
-			&copy; Susan Lin, 2003-2015.
+			&copy; Susan Lin, 2003-2016.
 		</div>
 
 	</footer>
