switch coffee link for square cash

--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -1,45 +1,44 @@
 <nav>
 
-	<a href="/">
-		<img src="/images/bysusanlin-totoro.svg" height="60px">
-	</a>
+  <a href="/">
+    <img src="/images/bysusanlin-totoro.svg" height="60px">
+  </a>
 
-	<p>
-		Upcoming Shows
-	</p>
+  <p>
+    Upcoming Shows
+  </p>
 
-	<p>
-  		Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-  		March 1st - April 30th
-  	</p>
-  	<p>
-  	    Sketchnoting @ <a href="http://clarityconf.com/">Clarity Conf</a> <br>
-  	    March 31st - April 1st
-  	</p>
+  <p>
+    Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
+    March 1st - April 30th
+  </p>
+  <p>
+    Sketchnoting @ <a href="http://clarityconf.com/">Clarity Conf</a> <br>
+    March 31st - April 1st
+  </p>
 
-	<div class="typeLowlight"> &mdash; </div>
+  <div class="typeLowlight"> &mdash; </div>
 
-		<p>
-			Support My Work
-		</p>
+  <p>
+    Support My Work
+  </p>
 
-		<p>
-			<a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
-			Framed Originals &amp; Prints
-		</p>
-		<p>
-			<a href="http://shop.bysusanlin.com"> Shop </a>
-			<br>
-			Unframed Prints
-		</p>
-		<p>
-			<a href="https://www.patreon.com/susan"> Patreon </a> <br>
-			Monthly Support
-		</p>
-    <p>
-	    <a href='https://ko-fi.com/06JVAZ50RNQ' target='_blank'>Buy me a coffee</a> <br>
-	    One Time Support
-		</p>
-
+  <p>
+    <a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
+    Framed Originals &amp; Prints
+  </p>
+  <p>
+    <a href="http://shop.bysusanlin.com"> Shop </a>
+    <br>
+    Unframed Prints
+  </p>
+  <p>
+    <a href="https://www.patreon.com/susan"> Patreon </a> <br>
+    Monthly Support
+  </p>
+  <p>
+    <a href="https://cash.me/$SusanL">Buy me a coffee</a> <br>
+    One Time Support
+  </p>
 
 </nav>
