--- a/src/illustration/index.html
+++ b/src/illustration/index.html
@@ -13,7 +13,7 @@
 		<div class="intro">
 			<h2> Illustration </h2>
 			<p>
-		 		This will be updated with my favorite sketching and painting projects.
+		 		This will be updated with my favorite sketching and painting projects. For now, you can see my work <a href="http://instagram.com/susanl">on instagram.</a>
 		 		<br><br>
 		 		Availability:
 		 		<li>
