--- a/illustration/index.html
+++ b/illustration/index.html
@@ -71,7 +71,7 @@
 		<div class="intro">
 			<h2> Illustration </h2>
 			<p>
-		 		This will be updated with my favorite sketching and painting projects.
+		 		This will be updated with my favorite sketching and painting projects. For now, you can see my work <a href="http://instagram.com/susanl">on instagram.</a>
 		 		<br><br>
 		 		Availability:
 		 		<li>
@@ -170,7 +170,7 @@
   </a>
 
   <p>
-    Upcoming Shows
+    Upcoming Events
   </p>
 
   <p>
