adds more sketchnotes to page and moves up link, updates nav with new events, adds social media to footer

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -17,7 +17,7 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com">Treehouse</a> and an Artist.
+				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com">Treehouse</a> and an Artist, primarily painting in watercolor.
       </p>
 
       <p>
@@ -25,7 +25,7 @@
       </p>
 
       <p>
-				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints a <a href="http://shop.bysusanlin.com/susan/Ghibli%20Stained%20Glass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes deliberate practice is the key to a successful art practice.
+				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and is inspired by Studio Ghibli. She believes delibrate practice is the key to a successful art practice.
       </p>
 
       <p>
@@ -39,9 +39,6 @@
           </li>
           <li>
             <a href="https://usesthis.com/interviews/susan.lin">The Set-up</a> &mdash; What do people use to get stuff done?
-          </li>
-          <li>
-            <a href="http://betwixt.is/the-league-of-kind-and-kindred/yes-and-yes-and-yes-and-yes">Betwixt Letter Series</a> &mdash; On saying 'Yes!' to everything
           </li>
           <li>
             <a href="http://betwixt.is/delighted-by/designer-miniviews-susan-lin">Betwixt Mini-interview</a> &mdash; Interview with Susan Lin
