--- a/src/_tpls/footer.html
+++ b/src/_tpls/footer.html
@@ -62,6 +62,36 @@
 				</li>
 			</a>
 
+      <a href="http://instagram.com/susanl">
+        <li>
+          Instagram
+        </li>
+      </a>
+
+      <a href="http://twitter.com/bysusanlin">
+        <li>
+          Twitter
+        </li>
+      </a>
+
+      <a href="http://pinterest.com/susanl/pins">
+        <li>
+          Pinterest
+        </li>
+      </a>
+
+      <a href="http://dribbble.com/bysusanlin">
+        <li>
+          Dribbble
+        </li>
+      </a>
+
+      <a href="http://codepen.io/bysusanlin">
+        <li>
+          CodePen
+        </li>
+      </a>
+
 		</ul>
 
 		<div class="clear"></div>
