--- a/src/sketchnotes/index.html
+++ b/src/sketchnotes/index.html
@@ -15,7 +15,7 @@
 			<h2> Sketchnotes </h2>
 
 			<p>
-					Hire me to sketchnote your event. I can effectively sketchnote topics in User Experience, Design Process, Front-end Engineering, and Diversity.
+					Hire me to sketchnote your event. I can effectively sketchnote topics in User Experience, Design Process, Front-end Engineering, and Diversity. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Check out the full archive of sketchnotes.</a>
 			</p>
 
 			<p>
@@ -73,7 +73,7 @@
 
 			<h2> Featured </h2>
 			<p>
-				Previously I've sketched AlterConf, XOXOfest, CSSconf, Interaction, and various local events. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Check out the full archive.</a>
+				Previously I've sketched AlterConf, XOXOfest, CSSconf, Interaction, and various local events.
 
 				<br><br>
 
@@ -108,6 +108,27 @@
 
       <p>
         "I loved working with Susan. Her sketchnotes captured the feel of AlterConf Portland so well and were beautiful. I highly recommend her work." &mdash;<a href="http://www.alterconf.com/">Ashe Dryden &amp; the AlterConf staff</a>
+      </p>
+
+   </div>
+
+    <div>
+
+		  <img src="/images/work/sketchnotes.cssconf.2014.jpg">
+      <br>
+      <br>
+		  <img src="/images/work/sketchnotes.xoxo.jpg">
+      <br>
+      <br>
+		  <img src="/images/work/sketchnotes.mixin.jpg">
+      <br>
+      <br>
+		  <img src="/images/work/sketchnotes.cssconf.jpg">
+      
+      <h2> Favorite Sketchnotes </h2>
+
+      <p>
+         Featured above were some of my favorite sketchnotes across different topics. You can see <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">the full archive</a> on my blog.
       </p>
 
    </div>
