adds more sketchnotes to page and moves up link, updates nav with new events, adds social media to footer

--- a/about/index.html
+++ b/about/index.html
@@ -75,7 +75,7 @@
 			</h2>
 
 			<p>
-				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com">Treehouse</a> and an Artist.
+				Hello World; Susan is a Product Designer at <a href="http://teamtreehouse.com">Treehouse</a> and an Artist, primarily painting in watercolor.
       </p>
 
       <p>
@@ -83,7 +83,7 @@
       </p>
 
       <p>
-				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints a <a href="http://shop.bysusanlin.com/susan/Ghibli%20Stained%20Glass">Ghibli Stained Glass</a> series and many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees.</a> She believes deliberate practice is the key to a successful art practice.
+				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and is inspired by Studio Ghibli. She believes delibrate practice is the key to a successful art practice.
       </p>
 
       <p>
@@ -97,9 +97,6 @@
           </li>
           <li>
             <a href="https://usesthis.com/interviews/susan.lin">The Set-up</a> &mdash; What do people use to get stuff done?
-          </li>
-          <li>
-            <a href="http://betwixt.is/the-league-of-kind-and-kindred/yes-and-yes-and-yes-and-yes">Betwixt Letter Series</a> &mdash; On saying 'Yes!' to everything
           </li>
           <li>
             <a href="http://betwixt.is/delighted-by/designer-miniviews-susan-lin">Betwixt Mini-interview</a> &mdash; Interview with Susan Lin
@@ -147,22 +144,26 @@
   </a>
 
   <p>
-    Upcoming Events
+    See My Art
   </p>
 
   <p>
-    Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    March 1st - April 30th
+    <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
+    Portland, OR. Now-April 30th.
   </p>
   <p>
-    Sketchnoting @ <a href="http://clarityconf.com/">Clarity Conf</a> <br>
-    March 31st - April 1st
+    <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Coffee Shop</a> <br>
+    Walnut Creek, CA. April 7th.
+  </p>
+  <p>
+    <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
+    San Francisco, CA. Now-July 2017.
   </p>
 
   <div class="typeLowlight"> &mdash; </div>
 
   <p>
-    Support My Work
+    Support My Art
   </p>
 
   <p>
@@ -247,6 +248,36 @@
 					Patreon
 				</li>
 			</a>
+
+      <a href="http://instagram.com/susanl">
+        <li>
+          Instagram
+        </li>
+      </a>
+
+      <a href="http://twitter.com/bysusanlin">
+        <li>
+          Twitter
+        </li>
+      </a>
+
+      <a href="http://pinterest.com/susanl/pins">
+        <li>
+          Pinterest
+        </li>
+      </a>
+
+      <a href="http://dribbble.com/bysusanlin">
+        <li>
+          Dribbble
+        </li>
+      </a>
+
+      <a href="http://codepen.io/bysusanlin">
+        <li>
+          CodePen
+        </li>
+      </a>
 
 		</ul>
 
