--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -73,7 +73,7 @@
 			<h2> Sketchnotes </h2>
 
 			<p>
-					Hire me to sketchnote your event. I can effectively sketchnote topics in User Experience, Design Process, Front-end Engineering, and Diversity.
+					Hire me to sketchnote your event. I can effectively sketchnote topics in User Experience, Design Process, Front-end Engineering, and Diversity. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Check out the full archive of sketchnotes.</a>
 			</p>
 
 			<p>
@@ -131,7 +131,7 @@
 
 			<h2> Featured </h2>
 			<p>
-				Previously I've sketched AlterConf, XOXOfest, CSSconf, Interaction, and various local events. <a href="http://sketch.bysusanlin.com/tagged/sketchnotes"> Check out the full archive.</a>
+				Previously I've sketched AlterConf, XOXOfest, CSSconf, Interaction, and various local events.
 
 				<br><br>
 
@@ -170,6 +170,27 @@
 
    </div>
 
+    <div>
+
+		  <img src="/images/work/sketchnotes.cssconf.2014.jpg">
+      <br>
+      <br>
+		  <img src="/images/work/sketchnotes.xoxo.jpg">
+      <br>
+      <br>
+		  <img src="/images/work/sketchnotes.mixin.jpg">
+      <br>
+      <br>
+		  <img src="/images/work/sketchnotes.cssconf.jpg">
+      
+      <h2> Favorite Sketchnotes </h2>
+
+      <p>
+         Featured above were some of my favorite sketchnotes across different topics. You can see <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">the full archive</a> on my blog.
+      </p>
+
+   </div>
+
 	</div> <!-- sketchnotes -->
 
 <nav>
@@ -179,22 +200,26 @@
   </a>
 
   <p>
-    Upcoming Events
+    See My Art
   </p>
 
   <p>
-    Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    March 1st - April 30th
+    <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
+    Portland, OR. Now-April 30th.
   </p>
   <p>
-    Sketchnoting @ <a href="http://clarityconf.com/">Clarity Conf</a> <br>
-    March 31st - April 1st
+    <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Coffee Shop</a> <br>
+    Walnut Creek, CA. April 7th.
+  </p>
+  <p>
+    <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
+    San Francisco, CA. Now-July 2017.
   </p>
 
   <div class="typeLowlight"> &mdash; </div>
 
   <p>
-    Support My Work
+    Support My Art
   </p>
 
   <p>
@@ -279,6 +304,36 @@
 					Patreon
 				</li>
 			</a>
+
+      <a href="http://instagram.com/susanl">
+        <li>
+          Instagram
+        </li>
+      </a>
+
+      <a href="http://twitter.com/bysusanlin">
+        <li>
+          Twitter
+        </li>
+      </a>
+
+      <a href="http://pinterest.com/susanl/pins">
+        <li>
+          Pinterest
+        </li>
+      </a>
+
+      <a href="http://dribbble.com/bysusanlin">
+        <li>
+          Dribbble
+        </li>
+      </a>
+
+      <a href="http://codepen.io/bysusanlin">
+        <li>
+          CodePen
+        </li>
+      </a>
 
 		</ul>
 
