--- a/talks/index.html
+++ b/talks/index.html
@@ -125,22 +125,26 @@
   </a>
 
   <p>
-    Upcoming Events
+    See My Art
   </p>
 
   <p>
-    Art Show @ <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
-    March 1st - April 30th
+    <a href="http://www.behindthemuseumcafe.com/gallery.html">Behind the Museum Cafe</a> <br>
+    Portland, OR. Now-April 30th.
   </p>
   <p>
-    Sketchnoting @ <a href="http://clarityconf.com/">Clarity Conf</a> <br>
-    March 31st - April 1st
+    <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Coffee Shop</a> <br>
+    Walnut Creek, CA. April 7th.
+  </p>
+  <p>
+    <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
+    San Francisco, CA. Now-July 2017.
   </p>
 
   <div class="typeLowlight"> &mdash; </div>
 
   <p>
-    Support My Work
+    Support My Art
   </p>
 
   <p>
@@ -225,6 +229,36 @@
 					Patreon
 				</li>
 			</a>
+
+      <a href="http://instagram.com/susanl">
+        <li>
+          Instagram
+        </li>
+      </a>
+
+      <a href="http://twitter.com/bysusanlin">
+        <li>
+          Twitter
+        </li>
+      </a>
+
+      <a href="http://pinterest.com/susanl/pins">
+        <li>
+          Pinterest
+        </li>
+      </a>
+
+      <a href="http://dribbble.com/bysusanlin">
+        <li>
+          Dribbble
+        </li>
+      </a>
+
+      <a href="http://codepen.io/bysusanlin">
+        <li>
+          CodePen
+        </li>
+      </a>
 
 		</ul>
 
