updates events and shop links

--- a/src/_tpls/nav.html
+++ b/src/_tpls/nav.html
@@ -13,10 +13,6 @@
     Portland, OR. Now-April 30th.
   </p>
   <p>
-    <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Coffee Shop</a> <br>
-    Walnut Creek, CA. April 7th.
-  </p>
-  <p>
     <a href="https://www.facebook.com/teaspoonsanfrancisco/">Teaspoon SF</a> <br>
     San Francisco, CA. Now-July 2017.
   </p>
@@ -26,15 +22,11 @@
   <p>
     Support My Art
   </p>
-
-  <p>
-    <a href="https://www.levelframes.com/artists/susan-lin">Level Frames</a> <br>
-    Framed Originals &amp; Prints
-  </p>
+  
   <p>
     <a href="http://shop.bysusanlin.com"> Shop </a>
     <br>
-    Unframed Prints
+    Framed &amp; Unframed Prints
   </p>
   <p>
     <a href="https://www.patreon.com/susan"> Patreon </a> <br>
