updates about with art shows section, css with numbers style, treehouse section, illustration and sketchnotes copy

--- a/src/design/index.html
+++ b/src/design/index.html
@@ -31,7 +31,7 @@
 			<img src="/images/work/treehouse.png">
 			<h2> Treehouse </h2>
 			<p>
-				I currently work with the <a href="http://teamtreehouse.com">Treehouse</a> <a href="http://dribbble.com/treehouse">design team</a> specifically on the <a href="https://teamtreehouse.com/features/organizations">Organizations</a> product. I also code landing pages, illustrate course assets, and chip away at our styleguide. Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> marketing campaign.
+				I currently work with the <a href="http://teamtreehouse.com">Treehouse</a> <a href="http://dribbble.com/treehouse">design team</a> as a Product Designer. I also code landing pages, illustrate course assets, chip away at our styleguide, and <a href="https://medium.com/treehouse-engineering">write blog posts.</a> Featured above is the <a href="http://teamtreehouse.com/back-to-school">Back to School</a> 2015 marketing campaign.
 		</div>
 
 		<div>
