updates about with art shows section, css with numbers style, treehouse section, illustration and sketchnotes copy

--- a/about/index.html
+++ b/about/index.html
@@ -86,6 +86,8 @@
 				She illustrates. You may have seen <a href="http://sketch.bysusanlin.com/tagged/sketchnotes">her sketchnotes.</a> She paints many <a href="https://instagram.com/explore/tags/linwatercolorforest/">watercolor trees</a> and is inspired by Studio Ghibli. She believes delibrate practice is the key to a successful art practice.
       </p>
 
+      <br>
+
       <p>
         Interviews: <br>
         <ul>
@@ -100,6 +102,28 @@
           </li>
           <li>
             <a href="http://betwixt.is/delighted-by/designer-miniviews-susan-lin">Betwixt Mini-interview</a> &mdash; Interview with Susan Lin
+          </li>
+        </ul>
+      </p>
+
+      <br>
+
+      <p>
+        Art Shows &amp; Engagements: <br>
+        <ul>
+          <li>
+            <a href="https://www.facebook.com/teaspoonsanfrancisco/">Art on display at Teaspoon SF</a> &mdash;
+              San Francisco, CA. <span class="typeNums">Now.</span>
+          </li>
+          <li>
+            <a href="http://www.behindthemuseumcafe.com/gallery.html">Show at Behind the Museum Cafe</a> &mdash;
+              Portland, OR. <span class="typeNums">3/1/16-4/30/16.</span>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/events/1580301958953195/?active_tab=posts">Group Show at Coffee Shop</a> &mdash; Walnut Creek, CA. <span class="typeNums">4/7/16.</span>
+          </li>
+          <li>
+            <a href="http://www.alternativepressexpo.com/">Booth at Alternative Press Expo</a> &mdash; San Jose, CA. <span class="typeNums">10/3/15-10/4/15.</span>
           </li>
         </ul>
       </p>
