--- a/sketchnotes/index.html
+++ b/sketchnotes/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="/css/screen.css">
 	<link rel="SHORTCUT ICON" href="/favicon.ico">
 
-	<title>Susan &times; Sketchnotes</title>
+<title>Susan &times; Sketchnotes</title>
 
 </head>
 
@@ -83,7 +83,7 @@
 						A ticket to your event.
 					</li>
 					<li>
-						Travel and hotel covered, if applicable.
+						Travel (local transit and flights) covered. Plus hotel when applicable.
 					</li>
 					<li>
 						Market freelance rate paid by the hour. Expect to cover hours preparing the set-up, time spent drawing talks, and post-processing.
@@ -101,16 +101,16 @@
 						You may promote your event with an official sketchnoter.
 					</li>
 					<li>
-						I draw in realtime, so you can live-tweet them during the conference.
-					</li>
-					<li>
-						You will receive high-resolution sketchnotes images to share for present and future events.
+						I draw in realtime. Sketchnotes are live-tweeted during the conference.
 					</li>
 					<li>
 						I will cross-promote from my personal accounts before, during, and after the event.
 					</li>
 					<li>
-						(Optional) Gift sketchnotes to your speakers! Provide the nice paper. I can consult on frames and gift presentation if you'd like.
+						You will receive high-resolution sketchnotes images to share for present and future events.
+					</li>
+					<li>
+            Sketchnotes are offered to speakers at the end of the event as gifts.
 					</li>
 				</ul>
 			</p>
@@ -131,7 +131,7 @@
 
 			<h2> Featured </h2>
 			<p>
-				Previously I've sketched AlterConf, XOXOfest, CSSconf, Interaction, and various local events.
+				Previously I've sketched Smashing Conf, Clarity, AlterConf, XOXOfest, CSSconf, Interaction, and various local events.
 
 				<br><br>
 
@@ -182,7 +182,7 @@
       <br>
       <br>
 		  <img src="/images/work/sketchnotes.cssconf.jpg">
-      
+
       <h2> Favorite Sketchnotes </h2>
 
       <p>
