--- a/src/about/index.html
+++ b/src/about/index.html
@@ -37,7 +37,7 @@
             <a href="http://spec.fm/podcasts/design-details/22326">Design Details Podcast</a> &mdash; 86: Adult Recess feat. Susan Lin
           </li>
           <li>
-            <a href="http://blog.helloflo.com/susan-lin-proves-you-can-pursue-design-and-coding-at-the-same-time/">HelloFlo Blog</a> &mdash; Susan Lin Proves You Can Pursue Design and Coding at the Same Time
+            <a href="http://helloflo.com/susan-lin-proves-you-can-pursue-design-and-coding-at-the-same-time/">HelloFlo Blog</a> &mdash; Susan Lin Proves You Can Pursue Design and Coding at the Same Time
           </li>
           <li>
             <a href="https://usesthis.com/interviews/susan.lin">The Set-up</a> &mdash; What do people use to get stuff done?
