--- a/src/_tpls/head.html
+++ b/src/_tpls/head.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width">
 
-	<meta name="description" content="Websites! @bysusanlin">
+	<meta name="description" content="Susan is a Product Designer and Watercolor Artist. She also writes CSS, enjoys Pixel Art, and gets paid to Sketchnote. http://shop.bysusanlin.com">
 	<meta name="author" content="Susan Lin, Susan L., Susan, bysusanlin, @bysusanlin">
 
 	<meta name="p:domain_verify" content="766c1df40cfdc1ba812d5b2668f45ede">
